--- a/.github/workflows/ftp-deploy.yml
+++ b/.github/workflows/ftp-deploy.yml
@@ -21,7 +21,7 @@ jobs:
         port: 22
         local-dir: web/
         server-dir: ${{ secrets.FTP_SERVER_DIRECTORY }}
-        state-name: ${{ secrets.FTP_SERVER_DIRECTORY }}/sync-state.json
+        state-name: sync-state.json
         dry-run: true
         exclude: |
           **/.git*
