Fix FTP deploy YAML to exclude .git files correctly

--- a/.github/workflows/ftp-deploy.yml
+++ b/.github/workflows/ftp-deploy.yml
@@ -30,8 +30,7 @@ jobs:
         remote-password: ${{ secrets.FTP_PASSWORD }}
         remote-port: 22
         sync-delta-excludes: |
-          **/.git*
-          **/.git/**
+          .git*
           web/typescript/**
         local-path: web/
         remote-path: ${{ secrets.FTP_SERVER_DIRECTORY }}
